<resources>
    <string name="app_name">TeamFind</string>
    <string name="napaka_omrezje">Napaka omrezja</string>
    <string name="URL_base_storitve">http://192.168.1.95/TF/</string>
    <string name="URL_rel_login">user.php?intent=login</string>
    <string name="login_sucesfull">Login sucessfull</string>
    <string name="login_failed">login failed</string>
    <string name="napaka_storitev">napaka</string>
    <string name="edit_profile_and_preferences">Edit profile and preferences</string>
    <string name="find_players">Find players</string>
    <string name="games">Games</string>
    <string name="URL_rel_matchmaker">user.php?intent=matchmake</string>
    <string name="select_times_to_play">Select times to play:</string>
    <string name="URL_rel_update">user.php?intent=update</string>
    <string name="update_failed">FAILED</string>
    <string name="update_sucesfull">SUCESS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="URL_rel_games">games.php</string>
    <string name="URL_rel_games_user">games.php?intent=get</string>
    <string name="submit_rating">Submit</string>
    <string name="subscribe">Subscribe</string>
    <string name="submit">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register to TeamFind</string>
    <string name="select_language">Select language</string>
    <string name="URL_rel_register">user.php</string>
    <string name="URL_rel_lang">lang.php</string>

</resources>